--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </div>
             <div class="about__me--left">
               <h1 class="about-me__info--tittle">
-                <span class="fade">Hey! I'm <span class="text--purple">Tadie</span>
+                <span class="fade">Hey! I'm <span class="text--purple">Panashe</span>
               </h1></span> 
               <p class="about-me__info--para">
                 I'm a
