--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <section id="about-me">
       <nav>
-        <div class="personal__logo">Panashe</div>
+        <div class="personal__logo">Tadiwa</div>
         <ul class="nav__link--lists">
           <li class="nav__link">
             <a
@@ -64,7 +64,7 @@
           </div>
             <div class="about__me--left">
               <h1 class="about-me__info--tittle">
-                <span class="fade">Hey! I'm <span class="text--purple">Panashe</span>
+                <span class="fade">Hey! I'm <span class="text--purple"></span>
               </h1></span> 
               <p class="about-me__info--para">
                 I'm a
@@ -213,7 +213,7 @@
       <div class="row footer__row">
         <a href="#" class="footer__anchor"
           ><figure class="footer__logo" style="color: #fff; font-size: 30px;">
-            Panashe
+            Tadiwa
             </figure
         >
     <span class="footer__logo--popper">Top <i class="fas fa-arrow-up"></i></span>
@@ -240,7 +240,7 @@
             >Resume</a
           >
         </div>
-        <div class="footer__copyright"> Copyright 2022  &copy; Panashe Gandidze</div>
+        <div class="footer__copyright"> Copyright 2022  &copy; Tadiwa</div>
       </div>
     </footer>
   </body>
